// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`editor > util > map > recalculateShape > deleting > should delete a point in the middle of the control points 1`] = `
Object {
  "coordinates": Array [
    Array [
      Array [
        -77.922203,
        42.086407,
      ],
      Array [
        -77.922196,
        42.086498,
      ],
      Array [
        -77.922173,
        42.086498,
      ],
      Array [
        -77.92183700000001,
        42.086513000000004,
      ],
    ],
    Array [
      Array [
        -77.92183700000001,
        42.086513000000004,
      ],
      Array [
        -77.92188300000001,
        42.086956,
      ],
      Array [
        -77.921929,
        42.087368,
      ],
      Array [
        -77.922043,
        42.088386,
      ],
      Array [
        -77.922112,
        42.088844,
      ],
      Array [
        -77.922135,
        42.089099,
      ],
    ],
    Array [
      Array [
        -77.92252574804179,
        42.09235127309673,
      ],
      Array [
        -77.92253,
        42.09235,
      ],
      Array [
        -77.92269,
        42.09374,
      ],
      Array [
        -77.92306,
        42.09616,
      ],
    ],
  ],
  "dragId": undefined,
  "updatedControlPoints": Array [
    Object {
      "defaultDwellTime": 0,
      "defaultTravelTime": 0,
      "distance": 0,
      "hidden": true,
      "id": "bv67",
      "permanent": true,
      "point": Object {
        "geometry": Object {
          "coordinates": Array [
            -77.922203,
            42.086407,
          ],
          "type": "Point",
        },
        "properties": Object {},
        "type": "Feature",
      },
      "shapeDistTraveled": 0,
      "stopId": "56c69e57-b007-4367-94ed-2c224662a2af",
      "timepoint": null,
    },
    Object {
      "distance": 345.8645390523855,
      "id": "y1e5",
      "permanent": true,
      "point": Object {
        "geometry": Object {
          "coordinates": Array [
            -77.92215494185281,
            42.08925407008939,
          ],
          "type": "Point",
        },
        "properties": Object {},
        "type": "Feature",
      },
    },
    Object {
      "defaultDwellTime": 0,
      "defaultTravelTime": 120,
      "distance": 691.729078104771,
      "hidden": true,
      "id": "fyz2",
      "permanent": true,
      "point": Object {
        "geometry": Object {
          "coordinates": Array [
            -77.92252574804179,
            42.09235127309673,
          ],
          "type": "Point",
        },
        "properties": Object {},
        "type": "Feature",
      },
      "shapeDistTraveled": 691.729078104771,
      "stopId": "a9c9cd55-ca3f-4ce7-9a93-96f2f4eaf089",
      "timepoint": null,
    },
    Object {
      "defaultDwellTime": 0,
      "defaultTravelTime": 240,
      "distance": 1118.1829618006304,
      "hidden": true,
      "id": "1gwo",
      "permanent": true,
      "point": Object {
        "geometry": Object {
          "coordinates": Array [
            -77.92305462145765,
            42.096168018547736,
          ],
          "type": "Point",
        },
        "properties": Object {},
        "type": "Feature",
      },
      "shapeDistTraveled": 1118.1829618006304,
      "shapePtSequence": NaN,
      "stopId": "5b6afe4d-f4f2-43f3-810e-91749420af53",
      "timepoint": null,
    },
  ],
}
`;

exports[`editor > util > map > recalculateShape > deleting > should delete the first stop 1`] = `
Object {
  "coordinates": Array [
    Array [
      Array [
        -77.922135,
        42.089099,
      ],
      Array [
        -77.92231799999999,
        42.090522,
      ],
      Array [
        -77.92235600000001,
        42.090847000000004,
      ],
      Array [
        -77.922432,
        42.091491000000005,
      ],
      Array [
        -77.922509,
        42.092201,
      ],
      Array [
        -77.922654,
        42.093502,
      ],
      Array [
        -77.922684,
        42.093745999999996,
      ],
    ],
    Array [
      Array [
        -77.922684,
        42.093745999999996,
      ],
      Array [
        -77.922707,
        42.09391,
      ],
      Array [
        -77.92274499999999,
        42.094158,
      ],
      Array [
        -77.922799,
        42.094528000000004,
      ],
      Array [
        -77.922974,
        42.095657,
      ],
      Array [
        -77.923104,
        42.096481,
      ],
    ],
  ],
  "dragId": undefined,
  "updatedControlPoints": Array [
    Object {
      "defaultDwellTime": 0,
      "defaultTravelTime": 120,
      "distance": 0,
      "hidden": true,
      "id": "fyz2",
      "permanent": true,
      "point": Object {
        "geometry": Object {
          "coordinates": Array [
            -77.92252574804179,
            42.09235127309673,
          ],
          "type": "Point",
        },
        "properties": Object {},
        "type": "Feature",
      },
      "shapeDistTraveled": 0,
      "shapePtSequence": NaN,
      "stopId": "a9c9cd55-ca3f-4ce7-9a93-96f2f4eaf089",
      "timepoint": null,
    },
    Object {
      "distance": 213.4093278296342,
      "id": "0cj3",
      "permanent": true,
      "point": Object {
        "geometry": Object {
          "coordinates": Array [
            -77.92276015989871,
            42.09426187381858,
          ],
          "type": "Point",
        },
        "properties": Object {},
        "type": "Feature",
      },
      "shapeDistTraveled": NaN,
      "shapePtSequence": NaN,
    },
    Object {
      "defaultDwellTime": 0,
      "defaultTravelTime": 240,
      "distance": 426.81865565926853,
      "hidden": true,
      "id": "1gwo",
      "permanent": true,
      "point": Object {
        "geometry": Object {
          "coordinates": Array [
            -77.92305462145765,
            42.096168018547736,
          ],
          "type": "Point",
        },
        "properties": Object {},
        "type": "Feature",
      },
      "shapeDistTraveled": 426.81865565926853,
      "shapePtSequence": NaN,
      "stopId": "5b6afe4d-f4f2-43f3-810e-91749420af53",
      "timepoint": null,
    },
  ],
}
`;

exports[`editor > util > map > recalculateShape > deleting > should delete the last stop 1`] = `
Object {
  "coordinates": Array [
    Array [
      Array [
        -77.922203,
        42.086407,
      ],
      Array [
        -77.922196,
        42.086498,
      ],
      Array [
        -77.922173,
        42.086498,
      ],
      Array [
        -77.92183700000001,
        42.086513000000004,
      ],
    ],
    Array [
      Array [
        -77.92183700000001,
        42.086513000000004,
      ],
      Array [
        -77.92188300000001,
        42.086956,
      ],
      Array [
        -77.921929,
        42.087368,
      ],
      Array [
        -77.922043,
        42.088386,
      ],
      Array [
        -77.922112,
        42.088844,
      ],
      Array [
        -77.922135,
        42.089099,
      ],
    ],
  ],
  "dragId": undefined,
  "updatedControlPoints": Array [
    Object {
      "defaultDwellTime": 0,
      "defaultTravelTime": 0,
      "distance": 0,
      "hidden": true,
      "id": "bv67",
      "permanent": true,
      "point": Object {
        "geometry": Object {
          "coordinates": Array [
            -77.922203,
            42.086407,
          ],
          "type": "Point",
        },
        "properties": Object {},
        "type": "Feature",
      },
      "shapeDistTraveled": 0,
      "stopId": "56c69e57-b007-4367-94ed-2c224662a2af",
      "timepoint": null,
    },
    Object {
      "distance": 345.8645390523855,
      "id": "y1e5",
      "permanent": true,
      "point": Object {
        "geometry": Object {
          "coordinates": Array [
            -77.92215494185281,
            42.08925407008939,
          ],
          "type": "Point",
        },
        "properties": Object {},
        "type": "Feature",
      },
    },
    Object {
      "defaultDwellTime": 0,
      "defaultTravelTime": 120,
      "distance": 691.729078104771,
      "hidden": true,
      "id": "fyz2",
      "permanent": true,
      "point": Object {
        "geometry": Object {
          "coordinates": Array [
            -77.92252574804179,
            42.09235127309673,
          ],
          "type": "Point",
        },
        "properties": Object {},
        "type": "Feature",
      },
      "shapeDistTraveled": 691.729078104771,
      "stopId": "a9c9cd55-ca3f-4ce7-9a93-96f2f4eaf089",
      "timepoint": null,
    },
  ],
}
`;

exports[`editor > util > map > recalculateShape > deleting > should delete the last stop when there are control points after the last stop 1`] = `
Object {
  "coordinates": Array [
    Array [
      Array [
        -77.922203,
        42.086407,
      ],
      Array [
        -77.922196,
        42.086498,
      ],
      Array [
        -77.922173,
        42.086498,
      ],
      Array [
        -77.92183700000001,
        42.086513000000004,
      ],
    ],
    Array [
      Array [
        -77.92183700000001,
        42.086513000000004,
      ],
      Array [
        -77.92188300000001,
        42.086956,
      ],
      Array [
        -77.921929,
        42.087368,
      ],
      Array [
        -77.922043,
        42.088386,
      ],
      Array [
        -77.922112,
        42.088844,
      ],
      Array [
        -77.922135,
        42.089099,
      ],
    ],
    Array [
      Array [
        -77.922135,
        42.089099,
      ],
      Array [
        -77.92231799999999,
        42.090522,
      ],
      Array [
        -77.92235600000001,
        42.090847000000004,
      ],
      Array [
        -77.922432,
        42.091491000000005,
      ],
      Array [
        -77.922509,
        42.092201,
      ],
      Array [
        -77.922654,
        42.093502,
      ],
      Array [
        -77.922684,
        42.093745999999996,
      ],
    ],
    Array [
      Array [
        -77.922684,
        42.093745999999996,
      ],
      Array [
        -77.922707,
        42.09391,
      ],
      Array [
        -77.92274499999999,
        42.094158,
      ],
      Array [
        -77.922799,
        42.094528000000004,
      ],
      Array [
        -77.922974,
        42.095657,
      ],
      Array [
        -77.923104,
        42.096481,
      ],
    ],
  ],
  "updatedControlPoints": Array [
    Object {
      "distance": 0,
      "id": "2zu5",
      "point": Object {
        "geometry": Object {
          "coordinates": Array [
            -122.00743318,
            37.06121322,
          ],
          "type": "Point",
        },
        "properties": Object {},
        "type": "Feature",
      },
      "pointType": 2,
      "shapePtSequence": 0,
      "stopId": "aad0f374-0f29-4300-ae05-6affbe0f1562",
    },
    Object {
      "distance": 170.7245980700509,
      "id": "25p4",
      "point": Object {
        "geometry": Object {
          "coordinates": Array [
            -122.00872656844231,
            37.060454715231224,
          ],
          "type": "Point",
        },
        "properties": Object {},
        "type": "Feature",
      },
      "pointType": 1,
      "shapePtSequence": 1,
    },
    Object {
      "distance": 341.4491961401018,
      "id": "cy46",
      "point": Object {
        "geometry": Object {
          "coordinates": Array [
            -122.00981702504365,
            37.059191439360475,
          ],
          "type": "Point",
        },
        "properties": Object {},
        "type": "Feature",
      },
      "pointType": 1,
      "shapePtSequence": 2,
      "stopId": undefined,
    },
    Object {
      "distance": 358.0806866950734,
      "id": "4s05",
      "point": Object {
        "geometry": Object {
          "coordinates": Array [
            -122.009919,
            37.059066,
          ],
          "type": "Point",
        },
        "properties": Object {},
        "type": "Feature",
      },
      "pointType": 1,
      "shapePtSequence": 3,
    },
  ],
}
`;

exports[`editor > util > map > recalculateShape > updating > should update a point in the middle of the control points 1`] = `
Object {
  "coordinates": Array [
    Array [
      Array [
        -77.922203,
        42.086407,
      ],
      Array [
        -77.922196,
        42.086498,
      ],
      Array [
        -77.922173,
        42.086498,
      ],
      Array [
        -77.92183700000001,
        42.086513000000004,
      ],
    ],
    Array [
      Array [
        -77.92183700000001,
        42.086513000000004,
      ],
      Array [
        -77.92188300000001,
        42.086956,
      ],
      Array [
        -77.921929,
        42.087368,
      ],
      Array [
        -77.922043,
        42.088386,
      ],
      Array [
        -77.922112,
        42.088844,
      ],
      Array [
        -77.922135,
        42.089099,
      ],
    ],
    Array [
      Array [
        -77.92252574804179,
        42.09235127309673,
      ],
      Array [
        -77.92253,
        42.09235,
      ],
      Array [
        -77.92251,
        42.0922,
      ],
      Array [
        -77.92264,
        42.09218,
      ],
      Array [
        -77.92374,
        42.09218,
      ],
      Array [
        -77.92374975804022,
        42.091818952512064,
      ],
    ],
    Array [
      Array [
        -77.92374975804022,
        42.091818952512064,
      ],
      Array [
        -77.92375,
        42.09181,
      ],
      Array [
        -77.92374,
        42.09218,
      ],
      Array [
        -77.92264,
        42.09218,
      ],
      Array [
        -77.92251,
        42.0922,
      ],
      Array [
        -77.92269,
        42.09374,
      ],
      Array [
        -77.92306,
        42.09616,
      ],
    ],
  ],
  "dragId": undefined,
  "updatedControlPoints": Array [
    Object {
      "defaultDwellTime": 0,
      "defaultTravelTime": 0,
      "distance": 0,
      "hidden": true,
      "id": "bv67",
      "permanent": true,
      "point": Object {
        "geometry": Object {
          "coordinates": Array [
            -77.922203,
            42.086407,
          ],
          "type": "Point",
        },
        "properties": Object {},
        "type": "Feature",
      },
      "shapeDistTraveled": 0,
      "stopId": "56c69e57-b007-4367-94ed-2c224662a2af",
      "timepoint": null,
    },
    Object {
      "distance": 345.8645390523855,
      "id": "y1e5",
      "permanent": true,
      "point": Object {
        "geometry": Object {
          "coordinates": Array [
            -77.92215494185281,
            42.08925407008939,
          ],
          "type": "Point",
        },
        "properties": Object {},
        "type": "Feature",
      },
    },
    Object {
      "defaultDwellTime": 0,
      "defaultTravelTime": 120,
      "distance": 691.729078104771,
      "hidden": true,
      "id": "fyz2",
      "permanent": true,
      "point": Object {
        "geometry": Object {
          "coordinates": Array [
            -77.92252574804179,
            42.09235127309673,
          ],
          "type": "Point",
        },
        "properties": Object {},
        "type": "Feature",
      },
      "shapeDistTraveled": 691.729078104771,
      "stopId": "a9c9cd55-ca3f-4ce7-9a93-96f2f4eaf089",
      "timepoint": null,
    },
    Object {
      "distance": 905.1384059344052,
      "id": "0cj3",
      "permanent": true,
      "point": Object {
        "geometry": Object {
          "coordinates": Array [
            -77.92382,
            42.09182,
          ],
          "type": "Point",
        },
        "properties": Object {},
        "type": "Feature",
      },
    },
    Object {
      "defaultDwellTime": 0,
      "defaultTravelTime": 240,
      "distance": 1437.544930172152,
      "hidden": true,
      "id": "1gwo",
      "permanent": true,
      "point": Object {
        "geometry": Object {
          "coordinates": Array [
            -77.92305462145765,
            42.096168018547736,
          ],
          "type": "Point",
        },
        "properties": Object {},
        "type": "Feature",
      },
      "shapeDistTraveled": 1437.544930172152,
      "shapePtSequence": NaN,
      "stopId": "5b6afe4d-f4f2-43f3-810e-91749420af53",
      "timepoint": null,
    },
  ],
}
`;

exports[`editor > util > map > recalculateShape > updating > should update the first stop 1`] = `
Object {
  "coordinates": Array [
    Array [
      Array [
        -77.92553,
        42.08666,
      ],
      Array [
        -77.92553,
        42.0867,
      ],
      Array [
        -77.92369,
        42.0867,
      ],
      Array [
        -77.92332,
        42.08668,
      ],
      Array [
        -77.9232,
        42.08666,
      ],
      Array [
        -77.92292,
        42.08654,
      ],
      Array [
        -77.92286,
        42.08652,
      ],
      Array [
        -77.92217,
        42.08649,
      ],
      Array [
        -77.92184,
        42.08651,
      ],
      Array [
        -77.92216,
        42.08925,
      ],
    ],
    Array [
      Array [
        -77.92183700000001,
        42.086513000000004,
      ],
      Array [
        -77.92188300000001,
        42.086956,
      ],
      Array [
        -77.921929,
        42.087368,
      ],
      Array [
        -77.922043,
        42.088386,
      ],
      Array [
        -77.922112,
        42.088844,
      ],
      Array [
        -77.922135,
        42.089099,
      ],
    ],
    Array [
      Array [
        -77.922135,
        42.089099,
      ],
      Array [
        -77.92231799999999,
        42.090522,
      ],
      Array [
        -77.92235600000001,
        42.090847000000004,
      ],
      Array [
        -77.922432,
        42.091491000000005,
      ],
      Array [
        -77.922509,
        42.092201,
      ],
      Array [
        -77.922654,
        42.093502,
      ],
      Array [
        -77.922684,
        42.093745999999996,
      ],
    ],
    Array [
      Array [
        -77.922684,
        42.093745999999996,
      ],
      Array [
        -77.922707,
        42.09391,
      ],
      Array [
        -77.92274499999999,
        42.094158,
      ],
      Array [
        -77.922799,
        42.094528000000004,
      ],
      Array [
        -77.922974,
        42.095657,
      ],
      Array [
        -77.923104,
        42.096481,
      ],
    ],
  ],
  "dragId": undefined,
  "updatedControlPoints": Array [
    Object {
      "defaultDwellTime": 0,
      "defaultTravelTime": 0,
      "distance": 0,
      "hidden": true,
      "id": "bv67",
      "permanent": true,
      "point": Object {
        "geometry": Object {
          "coordinates": Array [
            -77.92553,
            42.08666,
          ],
          "type": "Point",
        },
        "properties": Object {},
        "type": "Feature",
      },
      "shapeDistTraveled": 0,
      "stopId": "56c69e57-b007-4367-94ed-2c224662a2af",
      "timepoint": null,
    },
    Object {
      "distance": 619.530652509,
      "id": "y1e5",
      "permanent": true,
      "point": Object {
        "geometry": Object {
          "coordinates": Array [
            -77.92215494185281,
            42.08925407008939,
          ],
          "type": "Point",
        },
        "properties": Object {},
        "type": "Feature",
      },
      "shapeDistTraveled": NaN,
      "shapePtSequence": NaN,
    },
    Object {
      "defaultDwellTime": 0,
      "defaultTravelTime": 120,
      "distance": 965.3951915613854,
      "hidden": true,
      "id": "fyz2",
      "permanent": true,
      "point": Object {
        "geometry": Object {
          "coordinates": Array [
            -77.92252574804179,
            42.09235127309673,
          ],
          "type": "Point",
        },
        "properties": Object {},
        "type": "Feature",
      },
      "shapeDistTraveled": 965.3951915613854,
      "shapePtSequence": NaN,
      "stopId": "a9c9cd55-ca3f-4ce7-9a93-96f2f4eaf089",
      "timepoint": null,
    },
    Object {
      "distance": 1178.8045193910198,
      "id": "0cj3",
      "permanent": true,
      "point": Object {
        "geometry": Object {
          "coordinates": Array [
            -77.92276015989871,
            42.09426187381858,
          ],
          "type": "Point",
        },
        "properties": Object {},
        "type": "Feature",
      },
      "shapeDistTraveled": NaN,
      "shapePtSequence": NaN,
    },
    Object {
      "defaultDwellTime": 0,
      "defaultTravelTime": 240,
      "distance": 1392.213847220654,
      "hidden": true,
      "id": "1gwo",
      "permanent": true,
      "point": Object {
        "geometry": Object {
          "coordinates": Array [
            -77.92305462145765,
            42.096168018547736,
          ],
          "type": "Point",
        },
        "properties": Object {},
        "type": "Feature",
      },
      "shapeDistTraveled": 1392.213847220654,
      "shapePtSequence": NaN,
      "stopId": "5b6afe4d-f4f2-43f3-810e-91749420af53",
      "timepoint": null,
    },
  ],
}
`;

exports[`editor > util > map > recalculateShape > updating > should update the last stop 1`] = `
Object {
  "coordinates": Array [
    Array [
      Array [
        -77.922203,
        42.086407,
      ],
      Array [
        -77.922196,
        42.086498,
      ],
      Array [
        -77.922173,
        42.086498,
      ],
      Array [
        -77.92183700000001,
        42.086513000000004,
      ],
    ],
    Array [
      Array [
        -77.92183700000001,
        42.086513000000004,
      ],
      Array [
        -77.92188300000001,
        42.086956,
      ],
      Array [
        -77.921929,
        42.087368,
      ],
      Array [
        -77.922043,
        42.088386,
      ],
      Array [
        -77.922112,
        42.088844,
      ],
      Array [
        -77.922135,
        42.089099,
      ],
    ],
    Array [
      Array [
        -77.922135,
        42.089099,
      ],
      Array [
        -77.92231799999999,
        42.090522,
      ],
      Array [
        -77.92235600000001,
        42.090847000000004,
      ],
      Array [
        -77.922432,
        42.091491000000005,
      ],
      Array [
        -77.922509,
        42.092201,
      ],
      Array [
        -77.922654,
        42.093502,
      ],
      Array [
        -77.922684,
        42.093745999999996,
      ],
    ],
    Array [
      Array [
        -77.92276015989871,
        42.09426187381858,
      ],
      Array [
        -77.92276,
        42.09426,
      ],
      Array [
        -77.92311,
        42.09647,
      ],
      Array [
        -77.92323,
        42.09698,
      ],
      Array [
        -77.92335,
        42.09735,
      ],
      Array [
        -77.92364,
        42.09798,
      ],
    ],
    Array [
      Array [
        -77.92364,
        42.09798,
      ],
      Array [
        -77.92364,
        42.09798,
      ],
    ],
  ],
  "dragId": undefined,
  "updatedControlPoints": Array [
    Object {
      "defaultDwellTime": 0,
      "defaultTravelTime": 0,
      "distance": 0,
      "hidden": true,
      "id": "bv67",
      "permanent": true,
      "point": Object {
        "geometry": Object {
          "coordinates": Array [
            -77.922203,
            42.086407,
          ],
          "type": "Point",
        },
        "properties": Object {},
        "type": "Feature",
      },
      "shapeDistTraveled": 0,
      "stopId": "56c69e57-b007-4367-94ed-2c224662a2af",
      "timepoint": null,
    },
    Object {
      "distance": 345.8645390523855,
      "id": "y1e5",
      "permanent": true,
      "point": Object {
        "geometry": Object {
          "coordinates": Array [
            -77.92215494185281,
            42.08925407008939,
          ],
          "type": "Point",
        },
        "properties": Object {},
        "type": "Feature",
      },
    },
    Object {
      "defaultDwellTime": 0,
      "defaultTravelTime": 120,
      "distance": 691.729078104771,
      "hidden": true,
      "id": "fyz2",
      "permanent": true,
      "point": Object {
        "geometry": Object {
          "coordinates": Array [
            -77.92252574804179,
            42.09235127309673,
          ],
          "type": "Point",
        },
        "properties": Object {},
        "type": "Feature",
      },
      "shapeDistTraveled": 691.729078104771,
      "stopId": "a9c9cd55-ca3f-4ce7-9a93-96f2f4eaf089",
      "timepoint": null,
    },
    Object {
      "distance": 905.1384059344052,
      "id": "0cj3",
      "permanent": true,
      "point": Object {
        "geometry": Object {
          "coordinates": Array [
            -77.92276015989871,
            42.09426187381858,
          ],
          "type": "Point",
        },
        "properties": Object {},
        "type": "Feature",
      },
    },
    Object {
      "defaultDwellTime": 0,
      "defaultTravelTime": 240,
      "distance": 1118.5477337640395,
      "hidden": true,
      "id": "1gwo",
      "permanent": true,
      "point": Object {
        "geometry": Object {
          "coordinates": Array [
            -77.92262,
            42.09828,
          ],
          "type": "Point",
        },
        "properties": Object {},
        "type": "Feature",
      },
      "shapeDistTraveled": 1118.5477337640395,
      "stopId": "5b6afe4d-f4f2-43f3-810e-91749420af53",
      "timepoint": null,
    },
  ],
}
`;
